Fix top search area alignment (#1590)
* fix

* address comments

--- a/mlflow/server/js/src/components/ExperimentView.css
+++ b/mlflow/server/js/src/components/ExperimentView.css
@@ -55,6 +55,7 @@
 
 .ExperimentView-search-controls {
   margin-top: 8px;
+  min-width: 800px;
 }
 
 .ExperimentView-run-buttons{
